--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "src/app.ts",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.9.0",
     "mongoose": "^7.0.1"
   },
   "devDependencies": {
