--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "nodemon": "^2.0.21",
@@ -25,7 +26,8 @@
   },
   "scripts": {
     "start": "rimraf dist && tsc-watch --onSuccess \"npm run watch\"",
-    "watch": "nodemon \"src/app.ts\" --watch \"./src\""
+    "watch": "nodemon \"src/app.ts\" --watch \"./src\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "repository": {
     "type": "git",
